--- a/ClotherWeb/appsettings.json
+++ b/ClotherWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectString": {
+    "Clother": "Data Source=34.92.234.249;Initial Catalog=NewClother;User ID=sas;Password=Hungyk0707@"
+  }
 }
